<resources>
    <string name="app_name">生活日记</string>
    <string name="user_name_hint">请输入用户名</string>
    <string name="user_phone_hint">请输入手机号</string>
    <string name="verification_code_hint">请输入验证码</string>
    <string name="password_hint">请输入密码</string>
    <string name="password_sex_hint">请输入六位数密码</string>
    <string name="log_on">登录</string>
    <string name="register">注册新用户</string>
    <string name="verification_code_get">获取验证码</string>
    <string name="sure">确定</string>
</resources>
