<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/login_bc"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="15dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="27dp"
                android:background="@mipmap/user_name" />

            <EditText
                android:id="@+id/user_phone"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/user_phone_hint"
                android:inputType="phone"
                android:singleLine="true"
                android:textColor="#fff"
                android:textColorHint="@color/input_hint_color"
                android:textSize="15sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="27dp"
            android:layout_marginRight="27dp"
            android:background="#fff" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginTop="27dp"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="27dp"
                android:background="@mipmap/user_name" />

            <EditText
                android:id="@+id/verification_code"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/verification_code_hint"
                android:inputType="phone"
                android:singleLine="true"
                android:textColor="#fff"
                android:textColorHint="@color/input_hint_color"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/verification_code_get"
                android:layout_width="78dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="27dp"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/verification_code_get"
                android:textColor="#fff"
                android:textSize="15sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="27dp"
            android:layout_marginRight="27dp"
            android:background="#fff" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginTop="27dp"
            android:gravity="center_vertical">


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="27dp"
                android:background="@mipmap/password" />

            <EditText
                android:id="@+id/password"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/password_sex_hint"
                android:inputType="textVisiblePassword"
                android:singleLine="true"
                android:textColor="#fff"
                android:textColorHint="@color/input_hint_color"
                android:textSize="15sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="27dp"
            android:layout_marginRight="27dp"
            android:background="#fff" />

    </LinearLayout>

    <TextView
        android:id="@+id/submit_register"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginLeft="27dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="27dp"
        android:background="@drawable/log_on_selector"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/sure"
        android:textColor="#fff"
        android:textSize="18sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
</LinearLayout>